small dark mode fix

--- a/styles/dark.less
+++ b/styles/dark.less
@@ -3,11 +3,9 @@
  */
 
 html.dark-mode {
-    #layout-list {
-        #layout.layout-desktop & {
-            .iframe-wrapper {
-                border-top-color: @color-dark-border;
-            }
+    #layout.layout-desktop #layout-list {
+        .iframe-wrapper {
+            border-top-color: @color-dark-border;
         }
     }
 
